--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "MHDeveloper",
-            "email": "mhdeveloper98@gmail.com",
-            "role": "Developer"
+            "name": "mhdeveloper98",
+            "email": "mhdevloper49@gmail.com"
         }
     ],
     "require": {
